fix the alignment

--- a/api/static/main.css
+++ b/api/static/main.css
@@ -66,6 +66,5 @@ li {
 }
  .content{
      align-content: center;
-     max-width:900px;
      word-wrap:break-word;
 }
